--- a/mens.html
+++ b/mens.html
@@ -350,7 +350,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-8">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_1.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/1-front.jpg" alt="Groovy Apparel">
@@ -387,7 +387,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_1.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Sweater</h3>
 							<span class="cbp-pgprice">$25</span>
@@ -397,7 +397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-8">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_2.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/2-front.jpg" alt="Groovy Apparel">
@@ -434,7 +434,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_2.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Grey T-Shirt</h3>
 							<span class="cbp-pgprice">$15</span>
@@ -444,7 +444,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-8">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_3.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/3-front.jpg" alt="Groovy Apparel">
@@ -481,7 +481,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_3.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>White T-Shirt</h3>
 							<span class="cbp-pgprice">$15</span>
@@ -491,7 +491,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-7">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_4.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/4-front.jpg" alt="Groovy Apparel">
@@ -528,7 +528,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_4.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Denim Jacket</h3>
 							<span class="cbp-pgprice">$15</span>
@@ -538,7 +538,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-8">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_5.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/5-front.jpg" alt="Groovy Apparel">
@@ -575,7 +575,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_5.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Blue Jeans</h3>
 							<span class="cbp-pgprice">$20</span>
@@ -585,7 +585,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-9">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_6.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/6-front.jpg" alt="Groovy Apparel">
@@ -622,7 +622,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_6.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Green Trousers</h3>
 							<span class="cbp-pgprice">$18</span>
@@ -632,7 +632,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-7">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_7.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/7-front.jpg" alt="Groovy Apparel">
@@ -669,7 +669,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_7.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Red Shorts</h3>
 							<span class="cbp-pgprice">$15</span>
@@ -679,7 +679,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-8">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_8.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/8-front.jpg" alt="Groovy Apparel">
@@ -716,7 +716,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_8.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Black Jacket</h3>
 							<span class="cbp-pgprice">$35</span>
@@ -726,7 +726,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<li class="wthree aits w3l">
 					<div class="cbp-pgcontent" id="men-7">
 						<span class="cbp-pgrotate"><i class="fa fa-exchange" aria-hidden="true"></i></span>
-						<a href="mens_single.html">
+						<a href="mens_9.html">
 							<div class="cbp-pgitem a3ls">
 								<div class="cbp-pgitem-flip">
 									<img src="images/4-front.jpg" alt="Groovy Apparel">
@@ -763,7 +763,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							</li>
 						</ul>
 					</div>
-					<a href="mens_single.html">
+					<a href="mens_9.html">
 						<div class="cbp-pginfo w3layouts">
 							<h3>Denim Jacket</h3>
 							<span class="cbp-pgprice">$15</span>
